@@ -23,8 +23,7 @@
 (require 'ert)
 (require 'gentoo-newsitem-mode)
 
-(when (and (featurep 'xemacs)
-	   (not (fboundp 'cl-letf)))
+(unless (fboundp 'cl-letf)
   (defalias 'cl-letf  #'letf)
   (defalias 'cl-letf* #'letf*))
 
@@ -45,13 +44,12 @@
     (gentoo-newsitem-mode)
     (insert "Author: Larry the Cow\n")
     (if (fboundp 'font-lock-ensure)
-	(font-lock-ensure))
-    (if (featurep 'xemacs)
-	;; XEmacs refuses to fontify in batch mode,
-	;; therefore pretend that we are interactive
-	(cl-letf (((symbol-function 'noninteractive) #'ignore))
-	  (gentoo-newsitem-mode-test-run-silently
-	   (font-lock-fontify-buffer))))
+	(font-lock-ensure)
+      ;; XEmacs refuses to fontify in batch mode,
+      ;; therefore pretend that we are interactive
+      (cl-letf (((symbol-function 'noninteractive) #'ignore))
+	(gentoo-newsitem-mode-test-run-silently
+	 (font-lock-fontify-buffer))))
     (goto-char (point-min))
     (search-forward "Author")
     (should (equal (get-text-property (match-beginning 0) 'face)
